@@ -25,6 +25,7 @@ Current git version
   * New command 'lower' to lower a window in the stack.
   * The 'cycle_value' command now expects an attribute (and only works for
     settings for compatibility).
+  * New object 'types' containing documentation on (attribute-) types.
   * Bug fixes:
     - Fix mistakenly transparent borders of argb clients
   * New dependency: xrender
